--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav>
-      <h1 class="example">this example should span the entire page</h1>
+      <div class="example">
+        <h1>this example should span the entire page</h1>
+      </div>
     </nav>
     <section>
       <div class="element">
@@ -28,14 +31,15 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
-        <h4>This is text for a div element</h4>
+
+      <div class="blue">
+        <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
-        <h4>This is text for a div element</h4>
+      <div class="blue">
+        <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
-        <h4>This is text for a div element</h4>
+      <div class="blue">
+        <h3>This is text for a div element</h3>
       </div>
     </section>
   </body>
